Moved away from using D4J Snowflake, updated polls to be a slash command, removed a bunch of old CLI commands